--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <body>
     <h1>The Amazing Temperature Converter</h1>
     <div class="row">
-      <input type="text" id="inputFtoC"> &deg;F = <span id="solutionFtoC">__&deg;C</span><br>
+      <input type="text" id="inputFtoC"> &deg;F = <span id="solutionFtoC">__</span> &deg;C<br>
       <button id="convertFtoC">Convert</button>
     </div>
-   
+
     <div class="row">
-      <input type="text" id="inputCtoF"> &deg;C = <span id="solutionCtoF">__&deg;F</span><br>
+      <input type="text" id="inputCtoF"> &deg;C = <span id="solutionCtoF">__</span> &deg;F<br>
       <button id="convertCtoF">Convert</button>
     </div>
-    
+
     <script type="text/javascript" src="js/project.js"></script>
   </body>
 </html>
